<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_suspended">Your account has been suspended from Reddit.</string>
    <string name="account_suspended_permanent">Your account has been permanently suspended from Reddit</string>
    <string name="account_type">com.reddit.account</string>
    <string name="action_add_account">Add account</string>
    <string name="action_add_post_flair">Add post flair</string>
    <string name="action_approve_comment">Approve comment</string>
    <string name="action_approve_post">Approve post</string>
    <string name="action_back">Back</string>
    <string name="action_block">Block</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_card_view">Card view</string>
    <string name="action_change_post_flair">Change post flair</string>
    <string name="action_chat">Start new chat</string>
    <string name="action_chat_settings">Chat settings</string>
    <string name="action_clear">Clear</string>
    <string name="action_close">Close</string>
    <string name="action_collapse_thread">Collapse thread</string>
    <string name="action_communities">Communities</string>
    <string name="action_compact_view">Compact view</string>
    <string name="action_contact_moderators">Contact mods</string>
    <string name="action_continue">Continue</string>
    <string name="action_copy_text">Copy text</string>
    <string name="action_copy_url">Copy URL</string>
    <string name="action_delete">Delete</string>
    <string name="action_discard">Discard</string>
    <string name="action_distinguish_and_sticky">Distinguish and sticky</string>
    <string name="action_distinguish_as_admin">Distinguish as admin</string>
    <string name="action_distinguish_as_mod">Distinguish as moderator</string>
    <string name="action_distinguish_comment">Distinguish comment</string>
    <string name="action_done">Done</string>
    <string name="action_edit">Edit</string>
    <string name="action_edit_post_flair">Edit post flair</string>
    <string name="action_email_me">Email me</string>
    <string name="action_export">Export</string>
    <string name="action_follow">Follow</string>
    <string name="action_give_gold">Give Gold</string>
    <string name="action_hide_post">Hide post</string>
    <string name="action_lock_comments">Lock comments</string>
    <string name="action_mark_nsfw">Mark NSFW</string>
    <string name="action_mark_spoiler">Mark spoiler</string>
    <string name="action_mod_tools">Moderator tools</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_remove_comment">Remove comment</string>
    <string name="action_remove_post">Remove post</string>
    <string name="action_remove_spam">Remove as spam</string>
    <string name="action_report">Report</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="action_select_post_flair">Select post flair</string>
    <string name="action_share">Share</string>
    <string name="action_sort">Sort</string>
    <string name="action_sticky_post">Sticky post</string>
    <string name="action_subreddit_info">Community info</string>
    <string name="action_subscribe">Subscribe</string>
    <string name="action_unhide_post">Unhide post</string>
    <string name="action_unmark_nsfw">Unmark NSFW</string>
    <string name="action_unmark_spoiler">Unmark spoiler</string>
    <string name="action_unsave">Unsave</string>
    <string name="action_unsubscribe">Unsubscribe</string>
    <string name="action_view_reports">View reports</string>
    <string name="base_uri_default">https://oauth.reddit.com</string>
    <string name="gateway_uri_default">https://gateway.reddit.com</string>
    <string name="geopopular_option_global">Global</string>
    <string name="geopopular_option_my_location">My location</string>
    <string name="geopopular_option_other">Other</string>
    <string name="inbox_sign_up_text">Sign Up or Log In to customize your notifications, including chats and inbox.</string>
    <string name="inbox_sign_up_title">Too much info? Not enough info?</string>
    <string name="key_pref_accounts">key_pref_accounts</string>
    <string name="key_pref_acknowledgements">key_pref_acknowledgements</string>
    <string name="key_pref_alpha">key_pref_alpha</string>
    <string name="key_pref_amoled">key_pref_amoled</string>
    <string name="key_pref_auto_night">key_pref_auto_night</string>
    <string name="key_pref_autoplay">key_pref_autoplay_gifs_and_videos</string>
    <string name="key_pref_blur_nsfw">key_pref_blur_nsfw</string>
    <string name="key_pref_build_version">key_pref_build_version</string>
    <string name="key_pref_carousel_debug">key_pref_carousel_debug</string>
    <string name="key_pref_content_policy">key_pref_content_policy</string>
    <string name="key_pref_data_logging">key_pref_data_logging</string>
    <string name="key_pref_debug">key_pref_debug</string>
    <string name="key_pref_default_view">key_pref_view_mode</string>
    <string name="key_pref_disable_preview_images">key_pref_disable_preview_images</string>
    <string name="key_pref_enjoy_reddit_toast">key_pref_enjoy_reddit_toast</string>
    <string name="key_pref_help_faq">key_pref_help_faq</string>
    <string name="key_pref_mobile_subreddit">key_pref_mobile_subreddit</string>
    <string name="key_pref_mvp_frontpage">key_pref_mvp_frontpage</string>
    <string name="key_pref_mvp_popular">key_pref_mvp_popular</string>
    <string name="key_pref_mvp_usp">key_pref_mvp_usp</string>
    <string name="key_pref_notifications">key_pref_notifications</string>
    <string name="key_pref_onboarding_enabled">key_pref_onboarding_enabled</string>
    <string name="key_pref_over18">key_pref_over18</string>
    <string name="key_pref_privacy_policy">key_pref_privacy_policy</string>
    <string name="key_pref_share_copy_link">key_pref_share_copy_link</string>
    <string name="key_pref_share_shimmer">key_pref_share_shimmer</string>
    <string name="key_pref_submit_bug">key_pref_submit_bug</string>
    <string name="key_pref_theme">key_pref_theme</string>
    <string name="key_pref_upvote_toast">key_pref_upvote_toast</string>
    <string name="key_pref_uri_base">key_pref_uri_base</string>
    <string name="key_pref_uri_gateway">key_pref_uri_gateway</string>
    <string name="key_pref_use_staging">key_pref_use_staging</string>
    <string name="key_pref_user_agreement">key_pref_user_agreement</string>
    <string name="label_about">About</string>
    <string name="label_accounts">Accounts</string>
    <string name="label_acknowledgements">Acknowledgements</string>
    <string name="label_amoled_night_theme">AMOLED night theme</string>
    <string name="label_auto_night_theme">Auto night theme</string>
    <string name="label_autoplay">Autoplay</string>
    <string name="label_base_uri">Reddit Base URI</string>
    <string name="label_blur_nsfw_images">Blur NSFW Images</string>
    <string name="label_content_policy">Content policy</string>
    <string name="label_data_logging">Data logging</string>
    <string name="label_debug">Debug</string>
    <string name="label_default_view">Default view</string>
    <string name="label_disable_preview_images">Disable preview images</string>
    <string name="label_employee">Employee</string>
    <string name="label_enable_carousel_debug">Enable Carousel Debug Mode</string>
    <string name="label_enable_mvp_frontpage">Enable MVP Frontpage listing</string>
    <string name="label_enable_mvp_popular">Enable MVP Popular listing</string>
    <string name="label_enable_mvp_usp">Enable MVP USP listing</string>
    <string name="label_enable_onboarding_override">Onboarding always enabled</string>
    <string name="label_experiment_share_copy_link">Append Reddit to shares experiment</string>
    <string name="label_experiment_share_shimmer">Shimmer share when upvoting experiment</string>
    <string name="label_experiment_share_vs_rate">Share instead of rate experiment</string>
    <string name="label_experiment_upvote_toast">Upvote toast experiment</string>
    <string name="label_experiments">Experiments</string>
    <string name="label_gateway_uri">Reddit Gateway URI</string>
    <string name="label_general">General</string>
    <string name="label_help_faq">Help FAQ</string>
    <string name="label_join_alpha">Join employee alpha</string>
    <string name="label_log_in">Log in</string>
    <string name="label_network_config">Network config</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_over18">I\'m over 18 years old</string>
    <string name="label_privacy_policy">Privacy policy</string>
    <string name="label_show_debug">Show debug menu</string>
    <string name="label_sign_up">Sign up</string>
    <string name="label_support">Support</string>
    <string name="label_theme">Theme</string>
    <string name="label_use_staging">Use staging with local cookie</string>
    <string name="label_user_agreement">User agreement</string>
    <string name="label_view_options">View options</string>
    <string name="label_visit_redditmobile">Visit r/redditmobile</string>
    <string name="mod_tools_option_details">See details</string>
    <string name="mod_tools_option_message">Send message</string>
    <string name="mod_tools_option_remove">Remove</string>
    <string name="mod_tools_option_unmute">Unmute</string>
    <string name="mod_tools_option_view_profile">View profile</string>
    <string name="option_value_alienblue">ALIENBLUE</string>
    <string name="option_value_always">always</string>
    <string name="option_value_card">card</string>
    <string name="title_build_info">Build information</string>
    <string name="title_submit_bug">Report a bug</string>
    <string name="tw__like_tweet">Like Tweet</string>
    <string name="tw__liked_tweet">Undo Like</string>
    <string name="tw__share_tweet">Share Tweet</string>
</resources>