<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res-auto">
    <item app:icon="@drawable/ic_icon_post_edit" app:id="@+id/action_edit" app:title="@string/action_edit" app:iconTint="?attr/rdt_popup_menu_icon_color" />
    <item app:icon="@drawable/ic_icon_save" app:id="@+id/action_save" app:title="@string/action_save" app:iconTint="?attr/rdt_popup_menu_icon_color" />
    <item app:icon="@drawable/ic_icon_saved" app:id="@+id/action_unsave" app:title="@string/action_unsave" app:iconTint="?attr/rdt_popup_menu_icon_color" />
    <item app:icon="@drawable/ic_icon_share" app:id="@+id/action_share" app:title="@string/action_share" app:iconTint="?attr/rdt_popup_menu_icon_color" />
    <item app:icon="@drawable/ic_icon_document" app:id="@+id/action_copy_text" app:title="@string/action_copy_text" app:iconTint="?attr/rdt_popup_menu_icon_color" />
    <item app:icon="@drawable/ic_icon_jump_up" app:id="@+id/action_collapse_thread" app:title="@string/action_collapse_thread" app:iconTint="?attr/rdt_popup_menu_icon_color" />
    <item app:icon="@drawable/ic_icon_gild" app:id="@+id/action_give_gold" app:title="@string/action_give_gold" app:iconTint="?attr/rdt_popup_menu_icon_color" />
    <item app:icon="@drawable/ic_icon_report" app:id="@+id/action_report" app:title="@string/action_report" app:iconTint="?attr/rdt_popup_menu_icon_color" />
    <item app:icon="@drawable/ic_icon_delete" app:id="@+id/action_delete" app:title="@string/action_delete" app:iconTint="?attr/rdt_popup_menu_icon_color" />
    <item app:icon="@drawable/ic_icon_report" app:id="@+id/action_view_reports" app:title="@string/action_view_reports" app:iconTint="?attr/rdt_popup_menu_icon_color" />
</menu>
