<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_icon_pin" android:id="@+id/action_sticky_comment" android:title="@string/action_distinguish_and_sticky" />
    <item android:icon="@drawable/ic_icon_moderate" android:id="@+id/action_distinguish" android:title="@string/action_distinguish_as_mod" />
    <item android:icon="@drawable/ic_icon_delete" android:id="@+id/action_remove_comment" android:title="@string/action_remove_comment" />
    <item android:icon="@drawable/ic_icon_spam" android:id="@+id/action_remove_spam" android:title="@string/action_remove_spam" />
    <item android:icon="@drawable/ic_icon_approve_check" android:id="@+id/action_approve_comment" android:title="@string/action_approve_comment" />
</menu>
