<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res-auto">
    <item app:icon="@drawable/ic_icon_search" app:id="@+id/action_search" app:orderInCategory="10" app:title="@string/action_search" app:iconTint="?attr/rdt_menu_icon_color" app:showAsAction="always" />
    <item app:icon="@drawable/ic_icon_sort" app:id="@+id/action_sort" app:orderInCategory="20" app:title="@string/action_sort" app:iconTint="?attr/rdt_menu_icon_color" app:showAsAction="always" />
    <item app:icon="@drawable/ic_icon_mod_settings" app:id="@+id/action_mod_tools" app:visible="false" app:orderInCategory="30" app:title="@string/action_mod_tools" app:iconTint="?attr/rdt_menu_icon_color" app:showAsAction="always" />
    <item app:icon="@drawable/ic_icon_retry" app:id="@+id/action_refresh" app:orderInCategory="40" app:title="@string/action_refresh" app:iconTint="?attr/rdt_popup_menu_icon_color" app:showAsAction="UNKNOWN_DATA_0x0" />
</menu>
