<?xml version="1.0" encoding="utf-8"?>
<com.twitter.sdk.android.tweetui.TweetActionBarView xmlns:android="http://schemas.android.com/apk/res-auto" twitter:orientation="horizontal" twitter:id="@id/tw__tweet_action_bar" twitter:visibility="gone" style="@style/tw__TweetFillWidth">
    <com.twitter.sdk.android.tweetui.ToggleImageButton twitter:id="@id/tw__tweet_like_button" twitter:layout_marginRight="@dimen/tw__tweet_action_button_spacing" twitter:src="@drawable/tw__like_action" twitter:contentDescriptionOff="@string/tw__like_tweet" twitter:contentDescriptionOn="@string/tw__liked_tweet" style="@style/tw__TweetActionButton.Heart" />
    <ImageButton twitter:id="@id/tw__tweet_share_button" twitter:src="@drawable/tw__share_action" twitter:contentDescription="@string/tw__share_tweet" style="@style/tw__TweetActionButton.Share" />
</com.twitter.sdk.android.tweetui.TweetActionBarView>
